--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naver-datalab-mcp-server",
-  "version": "1.0.0", 
+  "version": "1.0.10",
   "description": "네이버 데이터랩 API MCP 서버 구현",
   "main": "dist/index.js",
   "type": "module",
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node --esm ./src/index.ts", 
+    "dev": "nodemon --exec ts-node --esm ./src/index.ts",
     "build": "tsc",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
@@ -34,12 +34,14 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.7.0",
     "dotenv": "^16.4.7",
+    "node-fetch": "^2.7.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.1.0", 
+    "@types/node-fetch": "^2.6.12",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
