--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.7.0",
+    "@xenova/transformers": "^2.17.2",
+    "better-sqlite3": "^11.9.1",
     "dotenv": "^16.4.7",
     "node-fetch": "^2.7.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.12",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.0.0",
     "@types/node-fetch": "^2.6.12",
