--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naver-datalab-mcp-server",
-  "version": "1.0.11",
+  "version": "1.0.23",
   "description": "네이버 데이터랩 API MCP 서버 구현",
   "main": "dist/index.js",
   "type": "module",
@@ -19,8 +19,10 @@
     "prebuild": "npm run clean",
     "lint": "eslint src/**/*.ts",
     "test": "jest",
+    "test:mcp": "ts-node --esm src/test/mcp-test.ts",
     "prepare": "npm run build",
-    "postinstall": "chmod +x ./dist/index.js"
+    "postinstall": "chmod +x ./dist/index.js",
+    "init-db": "ts-node --esm src/db/initDb.ts"
   },
   "keywords": [
     "mcp",
@@ -36,11 +38,13 @@
     "@xenova/transformers": "^2.17.2",
     "better-sqlite3": "^11.9.1",
     "dotenv": "^16.4.7",
+    "express": "^5.0.1",
     "node-fetch": "^2.7.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.12",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.0.0",
     "@types/node-fetch": "^2.6.12",
