--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "naver-datalab-mcp-server",
-  "version": "1.0.24",
+  "version": "1.0.27",
   "description": "네이버 데이터랩 API MCP 서버 구현",
   "main": "dist/index.js",
   "type": "module",
@@ -36,9 +36,9 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.7.0",
     "@xenova/transformers": "^2.17.2",
-    "better-sqlite3": "^11.9.1",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
+    "lowdb": "^1.0.0",
     "node-fetch": "^2.7.0",
     "zod": "^3.24.2"
   },
@@ -46,6 +46,7 @@
     "@types/better-sqlite3": "^7.6.12",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/lowdb": "^1.0.14",
     "@types/node": "^18.0.0",
     "@types/node-fetch": "^2.6.12",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
